# how

./: main.py  pyproject.toml
data/: gyul.csv
